_build/_log
### Starting build.
# Target: AHOD.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:AHOD.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules AHOD.ml > AHOD.ml.depends
# Target: codegen.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:codegen.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules codegen.ml > codegen.ml.depends
# Target: ast.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:ast.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules ast.ml > ast.ml.depends
# Target: sast.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:sast.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules sast.ml > sast.ml.depends
# Target: ast.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:ast.cmo, file:ast.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o ast.cmo ast.ml
# Target: sast.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:sast.cmo, file:sast.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o sast.cmo sast.ml
# Target: parse.mly, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:mly, file:parse.mly, infer, ocaml, ocamlyacc, parser, quiet, traverse }
/Users/maradimofte/.opam/default/bin/ocamlyacc parse.mly
+ /Users/maradimofte/.opam/default/bin/ocamlyacc parse.mly
1 rule never reduced
# Target: parse.mli.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:mli, file:parse.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules parse.mli > parse.mli.depends
# Target: scanner.mll, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:mll, file:scanner.mll, lexer, ocaml, ocamllex, quiet, traverse }
/Users/maradimofte/.opam/default/bin/ocamllex.opt -q scanner.mll
# Target: scanner.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:scanner.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules scanner.ml > scanner.ml.depends
# Target: parse.cmi, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:mli, file:parse.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o parse.cmi parse.mli
# Target: semant.ml.depends, tags: { package(llvm), package(llvm.analysis), warn(+a-4), extension:ml, file:semant.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package llvm -package llvm.analysis -modules semant.ml > semant.ml.depends
# Target: codegen.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:codegen.cmo, file:codegen.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o codegen.cmo codegen.ml
+ ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o codegen.cmo codegen.ml
File "codegen.ml", lines 62-114, characters 40-27:
 62 | ........................................match e with
 63 | 	SSliteral s -> L.define_global "str" (L.const_stringz context s) the_module
 64 | 	| SBliteral b  -> L.const_int i1_t (if b then 1 else 0)
 65 | 	| SIliteral i -> L.const_int i32_t i 
 66 |   | SFliteral f -> L.const_float_of_string float_t f
...
111 |     | A.Leq     -> L.build_icmp L.Icmp.Sle
112 |     | A.Greater -> L.build_icmp L.Icmp.Sgt
113 |     | A.Geq     -> L.build_icmp L.Icmp.Sge
114 |     ) e1' e2' "tmp" builder
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
SActionCall ("PRINT", _::_::_)
File "codegen.ml", lines 127-143, characters 23-37:
127 | .......................function
128 | 	| SBlock stmt_list -> List.fold_left stmt builder stmt_list 
129 |   | SExpr e -> ignore(expr builder e); builder
130 |   | SIf (predicate, then_stmt, else_stmt) ->
131 |     let bool_val = expr builder predicate in
...
140 |         add_terminal (stmt (L.builder_at_end context else_bb) else_stmt)
141 |         build_br_merge;
142 |     ignore(L.build_cond_br bool_val then_bb else_bb builder);
143 |     L.builder_at_end context merge_bb
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
(SNoexprexpr|SReturn _|SFor (_, _, _)|SWhile (_, _))
File "codegen.ml", line 7, characters 26-38:
7 | let translate (main_stmt, action_decls) =
                              ^^^^^^^^^^^^
Warning 27 [unused-var-strict]: unused variable action_decls.
File "codegen.ml", line 24, characters 4-16:
24 | let ltype_of_typ = function
         ^^^^^^^^^^^^
Warning 26 [unused-var]: unused variable ltype_of_typ.
File "codegen.ml", line 52, characters 5-11:
52 |  let lookup n m = StringMap.find n m
          ^^^^^^
Warning 26 [unused-var]: unused variable lookup.
# Target: scanner.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:scanner.cmo, file:scanner.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o scanner.cmo scanner.ml
# Target: semant.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:semant.cmo, file:semant.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o semant.cmo semant.ml
+ ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o semant.cmo semant.ml
File "semant.ml", lines 27-55, characters 22-51:
27 | ......................function
28 | 		(*need to figure out typ, if name is defined*)
29 | 		  ActionCall(aname, aparams) -> (String, SActionCall(aname, List.map check_expr aparams))
30 | 		| Sliteral s -> (String, SSliteral(s))
31 | 		| Iliteral i -> (Int, SIliteral(i))
...
52 |           | And | Or when same && t1 = Bool -> Bool
53 |           | _ -> raise (
54 |         Failure ("illegal binary operator " ))
55 |           in (ty, SBinop((t1, e1'), op, (t2, e2')))
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
(Noexpr|Id _|Assign (_, _))
File "semant.ml", lines 59-63, characters 22-39:
59 | ......................function
60 | 		Expr e -> SExpr (check_expr e) 
61 | 
62 | 		| Block sl -> 
63 |          SBlock(List.map check_stmt sl)
Warning 8 [partial-match]: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
(Noexpr|Return _|If (_, _, _)|For (_, _, _)|While (_, _))
File "semant.ml", line 6, characters 22-34:
6 | let check (main_stmt, action_decls) =
                          ^^^^^^^^^^^^
Warning 27 [unused-var-strict]: unused variable action_decls.
File "semant.ml", line 12, characters 6-18:
12 |   let check_assign lvaluet rvaluet err =
           ^^^^^^^^^^^^
Warning 26 [unused-var]: unused variable check_assign.
File "semant.ml", line 17, characters 6-13:
17 |   let symbols = List.fold_left (fun m (ty, name) -> StringMap.add name ty m)
           ^^^^^^^
Warning 26 [unused-var]: unused variable symbols.
File "semant.ml", line 40, characters 6-28:
40 |     | Binop(e1, op, e2) as e -> 
           ^^^^^^^^^^^^^^^^^^^^^^
Warning 26 [unused-var]: unused variable e.
# Target: AHOD.cmo, tags: { package(llvm), package(llvm.analysis), warn(+a-4), byte, compile, extension:cmo, extension:ml, file:AHOD.cmo, file:AHOD.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o AHOD.cmo AHOD.ml
+ ocamlfind ocamlc -c -w +a-4 -package llvm -package llvm.analysis -o AHOD.cmo AHOD.ml
File "AHOD.ml", line 26, characters 36-39:
26 |      | _ -> let sast = Semant.check ast in
                                         ^^^
Error: This expression has type
         Ast.program = Ast.stmt * Ast.bind list * Ast.action_decl list
       but an expression was expected of type Ast.stmt * 'a
Command exited with code 2.
# Compilation unsuccessful.
